ROS_Workspace/src/log/build_2023-08-04_14-31-48/Konig/stderr.log
  File "/home/max/Desktop/VisionCode/Honours_a1797823_a1764124/ROS_Workspace/src/install/Konig/lib/python3.8/site-packages/Konig/Konig.py", line 111
    def Display(tk.Frame):
                  ^
SyntaxError: invalid syntax

